Integer.valueOf(int) not available in 1.4
git-svn-id: https://eclim.svn.sourceforge.net/svnroot/eclim/trunk@453 b5bd0a2e-1a23-0410-8567-9814cbbba304